# dbt-bq-etl

./: .gitignore  README.md  dbt_project.yml  packages.yml  pyproject.toml
data/: .gitignore  main.py  web_to_gcs.py
macros/: get_vendor_names.sql
models/marts/: dim_vendors.sql  fct_trips.sql  schema.yml
models/marts/reporting/: fct_monthly_zone_revenue.sql  schema.yml
models/staging/: schema.yml  sources.yml  stg_green_tripdata.sql  stg_taxi_zone_lookup.sql  stg_yellow_tripdata.sql
seeds/: seeds_properties.yml
